# arr

./: .bazelrc  .clang-tidy  .envrc  .gitignore  .pre-commit-config.yaml  MODULE.bazel
assets/: BUILD.bazel  aseprite.bzl  pack_aseprite.bzl
assets/images/: close-button.aseprite
dev/: BUILD.bazel  clang_tidy.bzl
src/arr/: BUILD.bazel  geometry.hpp  main.cpp  timer.cpp  timer.hpp  ui.cpp  ui.hpp
src/assets/: BUILD.bazel
src/bin-to-header/: BUILD.bazel  def.bzl  main.go
src/bin-to-header/test/: BUILD.bazel  data.100  main.cpp
src/err/: BUILD.bazel  err.hpp
src/gogo/moreio/: BUILD.bazel  err_printer.go  optional_io.go
src/gogo/xs/: BUILD.bazel  containers.go
src/parse-sheet-data/: BUILD.bazel  parse_sheet_data.bzl  parse_sheet_data.go  tools.go
src/parse-sheet-data/aseprite/: BUILD.bazel  decode_aseprite_sheet.go
src/sdlxx/: BUILD.bazel  holder.hpp  sdlxx.cpp  sdlxx.hpp
