load("@bazel_env.bzl", "bazel_env")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@snailbaron-compilation-database//:compdb.bzl", "compilation_database")
load("clang_tidy.bzl", "clang_tidy")

compilation_database(
    name = "db",
    srcs = [
        "//src/arr",
    ],
)

native_binary(
    name = "buildifier",
    src = "@buildifier//file",
)

clang_tidy(
    name = "clang_tidy",
    db = ":db",
)

bazel_env(
    name = "env",
    tools = {
        "buildifier": ":buildifier",
        "clang-format": "@llvm//:bin/clang-format",
        "clang-tidy": "@llvm//:bin/clang-tidy",
        "pre-commit": "@pre_commit//file",
        "run-clang-tidy": "@llvm//:bin/run-clang-tidy",
    },
)
