load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "arr",
    srcs = [
        "geometry.hpp",
        "main.cpp",
        "timer.cpp",
        "timer.hpp",
        "ui.cpp",
        "ui.hpp",
    ],
    copts = [
        "-Werror",
        "--embed-dir=$(BINDIR)",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/assets",
        "//src/sdlxx",
    ],
)
